--- a/templates/result.html
+++ b/templates/result.html
@@ -35,7 +35,6 @@
 <div class='container col-md-6'>
     <h2 class="text-center mt-3">Job Aggregator | Find a JOB </h2><br><br><br><br><br>
     
-      <form action='/' method='POST'>
        
           
           
@@ -46,8 +45,8 @@
         
        <br><br>
 
-        <button type="submit" class="btn btn-outline-primary mb-2">Home</button>
-      </form></div>
+       <a href='/'> <button  class="btn btn-outline-primary mb-2">Home</button></a>
+     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
