--- a/templates/result.html
+++ b/templates/result.html
@@ -22,7 +22,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                
             </li>
            
             
@@ -46,6 +47,8 @@
        <br><br>
 
        <a href='/'> <button  class="btn btn-outline-primary mb-2">Home</button></a>
+       
+       <a href='/download'> <button  class="btn btn-outline-primary mb-2">Download Results</button></a>
      </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
