--- a/templates/index.html
+++ b/templates/index.html
@@ -41,9 +41,9 @@
           
         <div class="form-group">
             <label for="exampleFormControlTextarea1" class="col-md-6">Job role</label>
-            <input class="form-control" id="exampleFormControlTextarea1" name='role' placeholder="Type your query here. ex: weather report gokak" required>
+            <input class="form-control" id="exampleFormControlTextarea1" name='role' placeholder="Enter required job role ex: Python Developer" required>
             <label for="exampleFormControlTextarea1" class="col-md-6">place</label>
-            <input class="form-control" id="exampleFormControlTextarea1" name='place' placeholder="Type your query here. ex: weather report gokak" required>
+            <input class="form-control" id="exampleFormControlTextarea1" name='place' placeholder="Enter your required Location. ex: Bangalore" required>
          
         </div><br><br>
 
