--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
         </div>
       </nav>
 
-<div class='container col-md-6'>
+<div style='size:125px' class='container col-md-6'>
     <h2 class="text-center mt-3">Job Aggregator | Find a JOB </h2><br><br><br><br><br>
     
       <form action='/' method='POST'>
