--- a/templates/result.html
+++ b/templates/result.html
@@ -37,7 +37,7 @@
     <h2 style="font-size:35px;" class="text-center ">Job Aggregator | Find a JOB </h2><br><br><br><br><br>
     
        
-    <div class="container">
+    <div class="">
         <a href='/'> <button  class="btn btn-outline-primary mb-2">Home</button></a>
         <a style="float: right;" href='/download'> <button  class="btn btn-outline-primary mb-2">Download Results</button></a>
                   
@@ -79,7 +79,7 @@
                 <td>{{j[9]}}</td>
                 <td>{{j[10]}}</td>
                 <td>{{j[11]}}</td>
-                <td><a href="{{j[12]}}"><button class="btn btn-success">Link</button></a></td>
+                <td><a href="{{j[12]}}"><button class="btn btn-success">Open</button></a></td>
              
             </tr>
             {%endfor%}
