--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
     <title>Job Aggregator</title>
   </head>
-  <body>
+  <body >
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Job Aggregator</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,7 +32,7 @@
         </div>
       </nav>
 
-<div style='size:125px' class='container col-md-6'>
+<div class='container col-md-6'>
     <h2 class="text-center mt-3">Job Aggregator | Find a JOB </h2><br><br><br><br><br>
     
       <form action='/' method='POST'>
