--- a/templates/result.html
+++ b/templates/result.html
@@ -39,7 +39,7 @@
        
     <div class="">
         <a href='/'> <button  class="btn btn-outline-primary mb-2">Home</button></a>
-        <a style="float: right;" href='/download'> <button  class="btn btn-outline-primary mb-2">Download Results</button></a>
+        <a style="float: right;" href='/downloadfile'> <button  class="btn btn-outline-primary mb-2">Download Results</button></a>
                   
         <table class="table table-striped">
           <thead>
