--- a/templates/result.html
+++ b/templates/result.html
@@ -37,7 +37,7 @@
     <h2 style="font-size:35px;" class="text-center ">Job Aggregator | Find a JOB </h2><br><br><br><br><br>
     
        
-    <div class="">
+    <div class="container">
         <div class="col-md-3"><a href="/"> <button style="float: left;" class="btn btn-outline-primary mb-2" >Home</button></a>
         </div>
         <div class="colmd-9">
